// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsObjectElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsNativeComponentPropsObjectElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsArrayElementObjectElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsNativeComponentPropsArrayElementObjectElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsArrayElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsNativeComponentPropsArrayElement {
  private ArrayList<ArrayPropsNativeComponentPropsArrayElementObjectElement> mObject;
  @DoNotStrip
  public ArrayList<ArrayPropsNativeComponentPropsArrayElementObjectElement> getObject() {
    return mObject;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsNativeComponentProps {
  private ArrayList<String> mNames;
  private ArrayList<Boolean> mDisableds;
  private ArrayList<Integer> mProgress;
  private ArrayList<Float> mRadii;
  private ArrayList<Integer> mColors;
  private ArrayList<ReadableMap> mSrcs;
  private ArrayList<ReadableMap> mPoints;
  private ArrayList<String> mSizes;
  private ArrayList<ArrayPropsNativeComponentPropsObjectElement> mObject;
  private ArrayList<ArrayPropsNativeComponentPropsArrayElement> mArray;
  private ArrayList<ArrayList<ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement>> mArrayOfArrayOfObject;
  @DoNotStrip
  public ArrayList<String> getNames() {
    return mNames;
  }
  @DoNotStrip
  public ArrayList<Boolean> getDisableds() {
    return mDisableds;
  }
  @DoNotStrip
  public ArrayList<Integer> getProgress() {
    return mProgress;
  }
  @DoNotStrip
  public ArrayList<Float> getRadii() {
    return mRadii;
  }
  @DoNotStrip
  public ArrayList<Integer> getColors() {
    return mColors;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getSrcs() {
    return mSrcs;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getPoints() {
    return mPoints;
  }
  @DoNotStrip
  public ArrayList<String> getSizes() {
    return mSizes;
  }
  @DoNotStrip
  public ArrayList<ArrayPropsNativeComponentPropsObjectElement> getObject() {
    return mObject;
  }
  @DoNotStrip
  public ArrayList<ArrayPropsNativeComponentPropsArrayElement> getArray() {
    return mArray;
  }
  @DoNotStrip
  public ArrayList<ArrayList<ArrayPropsNativeComponentPropsArrayOfArrayOfObjectElementElement>> getArrayOfArrayOfObject() {
    return mArrayOfArrayOfObject;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentPropsNativePrimitivesElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsNativeComponentPropsNativePrimitivesElement {
  private ArrayList<Integer> mColors;
  private ArrayList<ReadableMap> mSrcs;
  private ArrayList<ReadableMap> mPoints;
  @DoNotStrip
  public ArrayList<Integer> getColors() {
    return mColors;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getSrcs() {
    return mSrcs;
  }
  @DoNotStrip
  public ArrayList<ReadableMap> getPoints() {
    return mPoints;
  }
}
",
  "java/com/facebook/react/viewmanagers/Slider/ArrayPropsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ArrayPropsNativeComponentProps {
  private ArrayList<ArrayPropsNativeComponentPropsNativePrimitivesElement> mNativePrimitives;
  @DoNotStrip
  public ArrayList<ArrayPropsNativeComponentPropsNativePrimitivesElement> getNativePrimitives() {
    return mNativePrimitives;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/BooleanPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class BooleanPropNativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture COLOR_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/ColorPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ColorPropNativeComponentProps {
  private @Nullable Integer mTintColor;
  @DoNotStrip
  public @Nullable Integer getTintColor() {
    return mTintColor;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture COMMANDS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/CommandNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class CommandNativeComponentProps {


}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/CommandNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class CommandNativeComponentProps {
  private @Nullable String mAccessibilityHint;
  @DoNotStrip
  public @Nullable String getAccessibilityHint() {
    return mAccessibilityHint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/DoublePropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class DoublePropNativeComponentProps {
  private double mBlurRadius;
  private double mBlurRadius2;
  private double mBlurRadius3;
  private double mBlurRadius4;
  private double mBlurRadius5;
  private double mBlurRadius6;
  @DoNotStrip
  public double getBlurRadius() {
    return mBlurRadius;
  }
  @DoNotStrip
  public double getBlurRadius2() {
    return mBlurRadius2;
  }
  @DoNotStrip
  public double getBlurRadius3() {
    return mBlurRadius3;
  }
  @DoNotStrip
  public double getBlurRadius4() {
    return mBlurRadius4;
  }
  @DoNotStrip
  public double getBlurRadius5() {
    return mBlurRadius5;
  }
  @DoNotStrip
  public double getBlurRadius6() {
    return mBlurRadius6;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/EventsNestedObjectNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class EventsNestedObjectNativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EVENT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/EventsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class EventsNativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/InterfaceOnlyComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class InterfaceOnlyComponentProps {


}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture EXCLUDE_ANDROID 1`] = `Map {}`;

exports[`GeneratePropsJavaPojo can generate fixture EXCLUDE_ANDROID_IOS 1`] = `Map {}`;

exports[`GeneratePropsJavaPojo can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ComponentFile1/ExcludedIosComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile1;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ExcludedIosComponentProps {


}
",
  "java/com/facebook/react/viewmanagers/ComponentFile2/MultiFileIncludedNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile2;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiFileIncludedNativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture FLOAT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/FloatPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class FloatPropNativeComponentProps {
  private float mBlurRadius;
  private float mBlurRadius2;
  private float mBlurRadius3;
  private float mBlurRadius4;
  private float mBlurRadius5;
  private float mBlurRadius6;
  @DoNotStrip
  public float getBlurRadius() {
    return mBlurRadius;
  }
  @DoNotStrip
  public float getBlurRadius2() {
    return mBlurRadius2;
  }
  @DoNotStrip
  public float getBlurRadius3() {
    return mBlurRadius3;
  }
  @DoNotStrip
  public float getBlurRadius4() {
    return mBlurRadius4;
  }
  @DoNotStrip
  public float getBlurRadius5() {
    return mBlurRadius5;
  }
  @DoNotStrip
  public float getBlurRadius6() {
    return mBlurRadius6;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture IMAGE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ImagePropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class ImagePropNativeComponentProps {
  private @Nullable ReadableMap mThumbImage;
  @DoNotStrip
  public @Nullable ReadableMap getThumbImage() {
    return mThumbImage;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INSETS_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ScrollView/InsetsPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ScrollView;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class InsetsPropNativeComponentProps {
  private @Nullable ReadableMap mContentInset;
  @DoNotStrip
  public @Nullable ReadableMap getContentInset() {
    return mContentInset;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/Int32EnumPropsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class Int32EnumPropsNativeComponentProps {
  private @Nullable Integer mMaxInterval;
  @DoNotStrip
  public @Nullable Integer getMaxInterval() {
    return mMaxInterval;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INTEGER_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/IntegerPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class IntegerPropNativeComponentProps {
  private int mProgress1;
  private int mProgress2;
  private int mProgress3;
  @DoNotStrip
  public int getProgress1() {
    return mProgress1;
  }
  @DoNotStrip
  public int getProgress2() {
    return mProgress2;
  }
  @DoNotStrip
  public int getProgress3() {
    return mProgress3;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/InterfaceOnlyComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class InterfaceOnlyComponentProps {
  private @Nullable String mAccessibilityHint;
  @DoNotStrip
  public @Nullable String getAccessibilityHint() {
    return mAccessibilityHint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Slider/ImageColorPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Slider;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class ImageColorPropNativeComponentProps {
  private @Nullable ReadableMap mThumbImage;
  private @Nullable Integer mColor;
  private @Nullable Integer mThumbTintColor;
  private @Nullable ReadableMap mPoint;
  @DoNotStrip
  public @Nullable ReadableMap getThumbImage() {
    return mThumbImage;
  }
  @DoNotStrip
  public @Nullable Integer getColor() {
    return mColor;
  }
  @DoNotStrip
  public @Nullable Integer getThumbTintColor() {
    return mThumbTintColor;
  }
  @DoNotStrip
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/NoPropsNoEvents/NoPropsNoEventsComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.NoPropsNoEvents;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class NoPropsNoEventsComponentProps {


}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture OBJECT_PROPS 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropObjectArrayProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ObjectPropsPropsObjectPropObjectArrayProp {
  private ArrayList<String> mArray;
  @DoNotStrip
  public ArrayList<String> getArray() {
    return mArray;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp {
  private @Nullable ReadableMap mImage;
  private @Nullable Integer mColor;
  private @Nullable ReadableMap mPoint;
  @DoNotStrip
  public @Nullable ReadableMap getImage() {
    return mImage;
  }
  @DoNotStrip
  public @Nullable Integer getColor() {
    return mColor;
  }
  @DoNotStrip
  public @Nullable ReadableMap getPoint() {
    return mPoint;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedPropANestedPropB.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsPropsObjectPropNestedPropANestedPropB {
  private @Nullable String mNestedPropC;
  @DoNotStrip
  public @Nullable String getNestedPropC() {
    return mNestedPropC;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedPropA.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsPropsObjectPropNestedPropA {
  private ObjectPropsPropsObjectPropNestedPropANestedPropB mNestedPropB;
  @DoNotStrip
  public ObjectPropsPropsObjectPropNestedPropANestedPropB getNestedPropB() {
    return mNestedPropB;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement {
  private @Nullable String mStringProp;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectPropNestedArrayAsProperty.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;
import java.util.ArrayList;

@DoNotStrip
public class ObjectPropsPropsObjectPropNestedArrayAsProperty {
  private ArrayList<ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement> mArrayProp;
  @DoNotStrip
  public ArrayList<ObjectPropsPropsObjectPropNestedArrayAsPropertyArrayPropElement> getArrayProp() {
    return mArrayProp;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsPropsObjectProp.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsPropsObjectProp {
  private @Nullable String mStringProp;
  private boolean mBooleanProp;
  private float mFloatProp;
  private int mIntProp;
  private @Nullable String mStringEnumProp;
  private @Nullable Integer mIntEnumProp;
  private ObjectPropsPropsObjectPropObjectArrayProp mObjectArrayProp;
  private ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp mObjectPrimitiveRequiredProp;
  private ObjectPropsPropsObjectPropNestedPropA mNestedPropA;
  private ObjectPropsPropsObjectPropNestedArrayAsProperty mNestedArrayAsProperty;
  @DoNotStrip
  public @Nullable String getStringProp() {
    return mStringProp;
  }
  @DoNotStrip
  public boolean getBooleanProp() {
    return mBooleanProp;
  }
  @DoNotStrip
  public float getFloatProp() {
    return mFloatProp;
  }
  @DoNotStrip
  public int getIntProp() {
    return mIntProp;
  }
  @DoNotStrip
  public @Nullable String getStringEnumProp() {
    return mStringEnumProp;
  }
  @DoNotStrip
  public @Nullable Integer getIntEnumProp() {
    return mIntEnumProp;
  }
  @DoNotStrip
  public ObjectPropsPropsObjectPropObjectArrayProp getObjectArrayProp() {
    return mObjectArrayProp;
  }
  @DoNotStrip
  public ObjectPropsPropsObjectPropObjectPrimitiveRequiredProp getObjectPrimitiveRequiredProp() {
    return mObjectPrimitiveRequiredProp;
  }
  @DoNotStrip
  public ObjectPropsPropsObjectPropNestedPropA getNestedPropA() {
    return mNestedPropA;
  }
  @DoNotStrip
  public ObjectPropsPropsObjectPropNestedArrayAsProperty getNestedArrayAsProperty() {
    return mNestedArrayAsProperty;
  }
}
",
  "java/com/facebook/react/viewmanagers/ObjectPropsNativeComponent/ObjectPropsProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ObjectPropsNativeComponent;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class ObjectPropsProps {
  private ObjectPropsPropsObjectProp mObjectProp;
  @DoNotStrip
  public ObjectPropsPropsObjectProp getObjectProp() {
    return mObjectProp;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture POINT_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/PointPropNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;
import com.facebook.react.bridge.ReadableMap;

@DoNotStrip
public class PointPropNativeComponentProps {
  private @Nullable ReadableMap mStartPoint;
  @DoNotStrip
  public @Nullable ReadableMap getStartPoint() {
    return mStartPoint;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/StringEnumPropsNativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class StringEnumPropsNativeComponentProps {
  private @Nullable String mAlignment;
  @DoNotStrip
  public @Nullable String getAlignment() {
    return mAlignment;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture STRING_PROP 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/Switch/StringPropComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.Switch;

import androidx.annotation.Nullable;
import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class StringPropComponentProps {
  private @Nullable String mAccessibilityHint;
  private @Nullable String mAccessibilityRole;
  @DoNotStrip
  public @Nullable String getAccessibilityHint() {
    return mAccessibilityHint;
  }
  @DoNotStrip
  public @Nullable String getAccessibilityRole() {
    return mAccessibilityRole;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/ComponentFile1/MultiFile1NativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile1;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiFile1NativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
  "java/com/facebook/react/viewmanagers/ComponentFile2/MultiFile2NativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.ComponentFile2;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiFile2NativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;

exports[`GeneratePropsJavaPojo can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "java/com/facebook/react/viewmanagers/MyComponents/MultiComponent1NativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.MyComponents;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiComponent1NativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
  "java/com/facebook/react/viewmanagers/MyComponents/MultiComponent2NativeComponentProps.java" => "/**
* Copyright (c) Meta Platforms, Inc. and affiliates.
*
* This source code is licensed under the MIT license found in the
* LICENSE file in the root directory of this source tree.
*
* @generated by codegen project: GeneratePropsJavaPojo.js
*/

package com.facebook.react.viewmanagers.MyComponents;

import com.facebook.proguard.annotations.DoNotStrip;

@DoNotStrip
public class MultiComponent2NativeComponentProps {
  private boolean mDisabled;
  @DoNotStrip
  public boolean getDisabled() {
    return mDisabled;
  }
}
",
}
`;
